--- a/Directory.Build.props
+++ b/Directory.Build.props
@@ -16,32 +16,35 @@
     <IsTrimmable>false</IsTrimmable>
 
     <!-- WarningsAsErrors
-  CS0419: Ambiguous reference in cref attribute 
-  CS1570: XML comment has badly formed XML 'Expected an end tag for element [parameter] 
-  CS1571: XML comment on [construct] has a duplicate param tag for [parameter] 
-  CS1572: XML comment has a param tag for '[parameter]', but there is no parameter by that name 
-  CS1573: Parameter has no matching param tag in the XML comment 
-  CS1574: XML comment has cref attribute that could not be resolved 
-  CS1580: Invalid type for parameter 'parameter number' in XML comment cref attribute 
-  CS1581: Invalid return type in XML comment cref attribute 
-  CS1584: XML comment has syntactically incorrect cref attribute
-  CS1587: XML comment is not placed on a valid language element 
-  CS1589: The syntax of a tag which referenced a file was incorrect 
-  CS1590: Invalid XML include element Missing file attribute 
-  CS1591: Missing XML comment for publicly visible type or member
-  CS1592: Badly formed XML in included comments file 
-  CS1598: XML parser could not be loaded. The XML documentation file will not be generated. 
-  CS1658: Identifier expected; 'true' is a keyword
-  CS1710: XML comment on 'type' has a duplicate typeparam tag for 'parameter'
-  CS1711: XML comment has a typeparam tag, but there is no type parameter by that name 
-  CS1712: Type parameter has no matching typeparam tag in the XML comment
-  CS1723: XML comment has cref attribute that refers to a type parameter
-  CS1734: XML comment has a paramref tag, but there is no parameter by that name
-  IL2***: Trim Warnings
-  IL3***: AOT Warnings -->
+     CS0419: Ambiguous reference in cref attribute 
+     CS1570: XML comment has badly formed XML 'Expected an end tag for element [parameter] 
+     CS1571: XML comment on [construct] has a duplicate param tag for [parameter] 
+     CS1572: XML comment has a param tag for '[parameter]', but there is no parameter by that name 
+     CS1573: Parameter has no matching param tag in the XML comment 
+     CS1574: XML comment has cref attribute that could not be resolved 
+     CS1580: Invalid type for parameter 'parameter number' in XML comment cref attribute 
+     CS1581: Invalid return type in XML comment cref attribute 
+     CS1584: XML comment has syntactically incorrect cref attribute
+     CS1587: XML comment is not placed on a valid language element 
+     CS1589: The syntax of a tag which referenced a file was incorrect 
+     CS1590: Invalid XML include element Missing file attribute 
+     CS1591: Missing XML comment for publicly visible type or member
+     CS1592: Badly formed XML in included comments file 
+     CS1598: XML parser could not be loaded. The XML documentation file will not be generated. 
+     CS1658: Identifier expected; 'true' is a keyword
+     CS1710: XML comment on 'type' has a duplicate typeparam tag for 'parameter'
+     CS1711: XML comment has a typeparam tag, but there is no type parameter by that name 
+     CS1712: Type parameter has no matching typeparam tag in the XML comment
+     CS1723: XML comment has cref attribute that refers to a type parameter
+     CS1734: XML comment has a paramref tag, but there is no parameter by that name 
+     xUnit1012: Null should not be used for type parameter
+     xUnit2021: Assert.ThrowsAsync is async. The resulting task should be awaited 
+     IL2***: Trim Warnings
+     IL3***: AOT Warnings-->
     <WarningsAsErrors>
       nullable,
       CS0419,CS1570,CS1571,CS1572,CS1573,CS1574,CS1580,CS1581,CS1584,CS1587,CS1589,CS1590,CS1591,CS1592,CS1598,CS1658,CS1710,CS1711,CS1712,CS1723,CS1734,
+      xUnit1012,xUnit2021,
       IL2001,IL2002,IL2003,IL2004,IL2005,IL2006,IL2007,IL2008,IL2009,
       IL2010,IL2011,IL2012,IL2013,IL2014,IL2015,IL2016,IL2017,IL2018,IL2019,
       IL2020,IL2021,IL2022,IL2023,IL2024,IL2025,IL2026,IL2027,IL2028,IL2029,
@@ -56,8 +59,7 @@
       IL2110,IL2111,IL2112,IL2113,IL2114,IL2115,IL2116,IL2117,IL2118,IL2119,
       IL2120,IL2121,IL2122,
       IL3050,IL3051,IL3052,IL3053,IL3054,IL3055,IL3056
-    </WarningsAsErrors>
-  </PropertyGroup>
+      </WarningsAsErrors>  </PropertyGroup>
 
   <ItemGroup>
     <InternalsVisibleTo Include="CommunityToolkit.Maui.Markup.UnitTests" />
