--- a/src/CommunityToolkit.Maui.Markup/CommunityToolkit.Maui.Markup.csproj
+++ b/src/CommunityToolkit.Maui.Markup/CommunityToolkit.Maui.Markup.csproj
@@ -14,7 +14,7 @@
 		<Authors>Microsoft</Authors>
 		<Owners>Microsoft</Owners>
 		<NeutralLanguage>en</NeutralLanguage>
-		<Product>CommunityToolkit.Maui.Markup (net6.0)</Product>
+		<Product>CommunityToolkit.Maui.Markup</Product>
 		<Copyright>© Microsoft Corporation. All rights reserved.</Copyright>
 		<PackageLicenseExpression>MIT</PackageLicenseExpression>
 		<PackageProjectUrl>https://github.com/communitytoolkit/Maui.Markup</PackageProjectUrl>
