--- a/Directory.Build.props
+++ b/Directory.Build.props
@@ -4,7 +4,7 @@
     <NetVersion>net9.0</NetVersion>
     <MauiPackageVersion>9.0.0-rc.2.24503.2</MauiPackageVersion>
     <MauiCommunityToolkitPackageVersion>9.1.0</MauiCommunityToolkitPackageVersion>
-    <LangVersion>latest</LangVersion>
+    <LangVersion>preview</LangVersion>
     <Nullable>enable</Nullable>
     <ImplicitUsings>enable</ImplicitUsings>
     <NoWarn>NETSDK1023</NoWarn>
